--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "rewrites": [
     {
-      "src": "/",
-      "dest": "/"
+      "source": "/",
+      "destination": "/"
     },
     {
-      "src": "/geteventid",
-      "dest": "/"
+      "source": "/geteventid",
+      "destination": "/"
     }
   ]
 }
