--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/",
-      "destination": "/"
-    },
-    {
-      "source": "/geteventid",
-      "destination": "/"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
